--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,4 +66,4 @@ jobs:
         run: cat exporter.log
 
       - name: probe for valid output
-        run: grep 'librechat_users_total 1.0' metrics
+        run: grep 'librechat_registered_users 1.0' metrics
