Add configuration for log level
This patch adds support for the `LOGGING_LEVEL` environment variable to
allow users to configure the log level.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
       - name: run exporter
         env:
           MONGODB_URI: "mongodb://127.0.0.1:27017/"
+          LOGGING_LEVEL: debug
         run: python metrics.py &> exporter.log &
 
       - name: get metrics
