Add configurable metric groups for performance optimization
- Add 8 environment variables to enable/disable specific metric groups
- All metrics enabled by default for backward compatibility
- Metrics grouped by: basic, token, user, model, time_window, rating, tool, file
- Update README with detailed configuration documentation
- Add performance optimization guide for large databases
- Update .env with example configurations
- Logs active configuration on startup

This allows users to disable expensive metric groups (ratings, tools, 5m windows)
to improve scraping performance on large LibreChat databases.

--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/
+
+# ===== Metric Group Toggles =====
+# Enable/disable specific metric groups to optimize performance for large databases
+# All metrics are enabled by default. Uncomment and set to "false" to disable a group.
+
+# ENABLE_BASIC_METRICS=true
+# ENABLE_TOKEN_METRICS=true
+# ENABLE_USER_METRICS=true
+# ENABLE_MODEL_METRICS=true
+# ENABLE_TIME_WINDOW_METRICS=true
+# ENABLE_RATING_METRICS=true
+# ENABLE_TOOL_METRICS=true
+# ENABLE_FILE_METRICS=true
