feat: implement background metrics collection for improved performance
Addresses issue #42 by implementing Option 1 (Background Metrics Collection):

- Add background thread that periodically collects metrics
- Cache metrics in memory with configurable TTL (default 60s)
- Serve cached metrics on /metrics endpoint for fast response times
- Add METRICS_CACHE_ENABLED and METRICS_CACHE_TTL environment variables
- Update documentation with cache configuration options

Collects metrics asynchronously rather than on every scrape request.

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/
 
+# ===== Performance Optimization =====
+# Background cache configuration (recommended for large databases)
+# METRICS_CACHE_ENABLED=true
+# METRICS_CACHE_TTL=60
+
 # ===== Metric Group Toggles =====
 # Enable/disable specific metric groups to optimize performance for large databases
 # All metrics are enabled by default. Uncomment and set to "false" to disable a group.
